Fix contrast issue with version link in the footer fixes #214

--- a/app/javascript/entrypoints/application.scss
+++ b/app/javascript/entrypoints/application.scss
@@ -8,6 +8,10 @@ a {
   color: rgb(12, 7, 150);
 }
 
+.deployment-version a {
+  color: black;
+}
+
 #banner a {
   color: #f58025;
 }
